--- a/luctus_at/book/index.html
+++ b/luctus_at/book/index.html
@@ -22,7 +22,7 @@
 					<header id="header" class="alt">
 						<span class="icon solid major fa-tint"></span>
 						<h1>luctus' book</h1>
-						<p>an anti-exploit menu</p>
+						<p>an anti-exploit-exploit menu</p>
 					</header>
 
 				<!-- Nav -->
@@ -86,11 +86,11 @@
 								<ul class="statistics">
 									<li class="style1">
 										<span class="icon solid fa-bug"></span>
-										<strong>32</strong> Exploits
+										<strong>35</strong> Exploits
 									</li>
 									<li class="style2">
 										<span class="icon solid fa-grip-lines"></span>
-										<strong>599</strong> Lines of code only
+										<strong>631</strong> Lines of code only
 									</li>
                   <li class="style3">
 										<span class="icon solid fa-eye-slash"></span>
@@ -98,11 +98,11 @@
 									</li>
                   <li class="style4">
 										<span class="icon solid fa-hands-helping"></span>
-										<strong>39</strong> Servers helped
+										<strong>62</strong> Servers helped
 									</li>
 									<li class="style5">
 										<span class="icon solid fa-clock"></span>
-										<strong>30.06.2022</strong> Last updated
+										<strong>01.02.2023</strong> Last updated
 									</li>
 								</ul>
 								<p class="content">-</p>
