--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -197,6 +197,9 @@
                     //["Luctus","DESCRIPTION","files/luctus_scoreboard.zip","images/lucid_scoreboard.png"],
                     ["Luctus Research","An SCPRP addon for researchers to write down notes","files/luctus_research.zip","images/luctus_research.png"],
                     ["Luctus Fancyjobmsg","An addon that simply adds a message when you change jobs","files/luctus_fancyjobmsg.zip","images/luctus_fancyjobmsg.mp4"],
+                    ["Luctus Miner","A very basic mining addon with crafting and selling","files/luctus_miner.zip","images/luctus_miner.mp4"],
+                    ["Luctus Trashbin","Remove unwanted entites by dropping it on the bin","files/luctus_trashbin.zip","images/luctus_trashbin.mp4"],
+                    ["Luctus Taser","A functioning taser without custom content (no materials, models)","files/luctus_taser.zip","images/luctus_taser.mp4"],
                 ];
                 addons.forEach(function(v,k){
                     AddSection(v[0],v[1],v[2],v[3],(k%2==1)?true:false);
