Updated luctus_book for luctus_at design (inbuilt)

--- a/luctus_at/index.html
+++ b/luctus_at/index.html
@@ -112,7 +112,7 @@
                                 <h2>Luctus book</h2>
                                 <p>An exploit finder for exploits which I actually found and used nowadays.</p>
                                 <ul class="actions">
-                                    <li><a href="/book" class="button">learn more</a></li>
+                                    <li><a href="book.html" class="button">learn more</a></li>
                                 </ul>
                             </div>
                         </div>
