Added new addons, moved one from dark to scp

--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -194,8 +194,9 @@
                     ["Luctus Safezones","Create a safezone at spawn so that nobody can be shot there","files/luctus_safezones.zip","images/luctus_safezones.png"],
                     ["Luctus Refunds","Automatically refund players if the server crashes, map changes, etc.","files/luctus_refunds.zip","images/luctus_refunds.png"],
                     ["Luctus Statistics","With !stats you open the job statistics - it shows which job gets played the most","files/luctus_statistics.zip","images/luctus_statistics.png"],
+                    ["Luctus Dailyreward","Get money/XP for logging in daily","files/luctus_dailyreward.zip","images/luctus_dailyreward.png"],
+                    ["Luctus Weaponcabinet","Take out weapons as a police officer and return them later","files/luctus_weaponcabinet.zip","images/luctus_weaponcabinet.png"],
                     //["Luctus","DESCRIPTION","files/luctus_scoreboard.zip","images/lucid_scoreboard.png"],
-                    ["Luctus Research","An SCPRP addon for researchers to write down notes","files/luctus_research.zip","images/luctus_research.png"],
                     ["Luctus Fancyjobmsg","An addon that simply adds a message when you change jobs","files/luctus_fancyjobmsg.zip","images/luctus_fancyjobmsg.mp4"],
                     ["Luctus Miner","A very basic mining addon with crafting and selling","files/luctus_miner.zip","images/luctus_miner.mp4"],
                     ["Luctus Trashbin","Remove unwanted entites by dropping it on the bin","files/luctus_trashbin.zip","images/luctus_trashbin.mp4"],
