--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -173,7 +173,9 @@
                 let addons = [
                     ["Luctus Activityplan","An activity plan for d-class players","files/luctus_activityplan.zip","images/luctus_activityplan.png"],
                     ["Luctus Code","A small box in the top right showing the current code (red,yellow,green)","files/luctus_code.zip","images/luctus_code.png"],
-                    ["Lucid SCP Names","A window whenever you change jobs to set your job-name (saves after change)","files/lucid_scp_names.zip","images/lucid_scp_names.png"],
+                    ["Luctus SCP Names","A window whenever you change jobs to set your job-name (saves after change)","files/luctus_scp_names.zip","images/luctus_scp_names.png"],
+                    ["Luctus Research","An SCPRP addon for researchers to write down notes","files/luctus_research.zip","images/luctus_research.png"],
+                    ["Luctus Jobnumbers","Give Jobs a name-prefix with random numbers. Can be set with !setid <name> <number>.","files/luctus_jobnumbers.zip","images/luctus_jobnumbers.png"],
                     ["Custom Lootsystem","Loot entities for weapons or entities. Shows when it can next be looted","files/lootsystem.zip","images/lootsystem.mp4"],
                     ["Luctus Intercom","Everyone on the map hears you in 2D if you get close to an intercom","files/luctus_intercom.zip","images/luctus_intercom.mp4"],
                     ["Luctus SCP Management","Ban players from jobs, set the scp code or enable emergency jobs","files/luctus_scp_mgmt.zip","images/luctus_scp_mgmt.mp4"],
