Added TTT addons page

--- a/luctus_at/book.html
+++ b/luctus_at/book.html
@@ -51,7 +51,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="darkrp.html">darkrp</a></li>
 						<li><a href="scprp.html">scprp</a></li>
-						<!--<li><a href="devhud.html">devhud</a></li>-->
+						<li><a href="ttt.html">ttt</a></li>
 						<li><a href="book.html" class="active">book</a></li>
 					</ul>
 				</nav>
