--- a/luctus_at/index.html
+++ b/luctus_at/index.html
@@ -55,7 +55,7 @@
                         <div class="content">
                             <div class="inner">
                                 <h2>DarkRP Addons</h2>
-                                <p>Check out my free and open source darkrp addons that I wrote.</p>
+                                <p>Check out my free and open source DarkRP addons that I wrote.</p>
                                 <ul class="actions">
                                     <li><a href="darkrp.html" class="button">go to darkrp addons</a></li>
                                 </ul>
@@ -70,6 +70,18 @@
                                 <p>Check out my free and open source SCP:RP addons that I wrote.</p>
                                 <ul class="actions">
                                     <li><a href="scprp.html" class="button">go to scprp addons</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
+                    <section>
+                        <a href="ttt.html" class="image"><img src="images/_index_ttt.png" alt="" data-position="top center" /></a>
+                        <div class="content">
+                            <div class="inner">
+                                <h2>TTT Addons</h2>
+                                <p>Check out my free and open source TTT addons that I wrote.</p>
+                                <ul class="actions">
+                                    <li><a href="ttt.html" class="button">go to ttt addons</a></li>
                                 </ul>
                             </div>
                         </div>
