--- a/luctus_at/ttt.html
+++ b/luctus_at/ttt.html
@@ -6,11 +6,11 @@
 -->
 <html>
 	<head>
-		<title>darkrp | luctus.at</title>
+		<title>ttt | luctus.at</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <meta name="description" content="garrys mod darkrp addons, free for everyone. Created by overlordakise">
+        <meta name="description" content="garrys mod ttt addons, free for everyone. Created by overlordakise">
 		<meta property="og:image" content="https://luctus.at/favicon.ico">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
         <style>
@@ -43,9 +43,9 @@
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
-						<li><a href="darkrp.html" class="active">darkrp</a></li>
+						<li><a href="darkrp.html">darkrp</a></li>
 						<li><a href="scprp.html">scprp</a></li>
-						<li><a href="ttt.html">ttt</a></li>
+						<li><a href="ttt.html" class="active">ttt</a></li>
 						<li><a href="book.html">book</a></li>
 					</ul>
 				</nav>
@@ -57,11 +57,11 @@
 				<!-- Main -->
 					<section id="addons" class="wrapper style2 spotlights">
                         <div class="inner">
-							<h1 class="major">DarkRP Addons</h1>
+							<h1 class="major">TTT Addons</h1>
                             <section>
                                 All these addons have been written by me, OverlordAkise.<br>
                                 You can download them either via the button or get the newest version from my github at:<br>
-                                <a href="https://github.com/OverlordAkise/darkrp-addons" target="_blank">https://github.com/OverlordAkise/darkrp-addons</a>
+                                <a href="https://github.com/OverlordAkise/ttt-addons" target="_blank">https://github.com/OverlordAkise/ttt-addons</a>
                             </section>
                         </div>
                         <!--
@@ -171,36 +171,12 @@
                     
                 }
                 let addons = [
-                    ["Luctus Serverstatus","An optimized Scoreboard that features ULX support via rightclick","files/luctus_serverstatus.zip","images/luctus_serverstatus.png"],
-                    ["Luctus Scoreboard","An optimized Scoreboard that features ULX support via rightclick","files/luctus_scoreboard.zip","images/luctus_scoreboard.png"],
-                    ["Luctus Logs","An easy and efficient logging system. Features filtering and gmodadminsuite logging modules support","files/luctus_logs.zip","images/luctus_logs.png"],
-                    ["Luctus HUD","A simple, fully functional HUD with ammo display and agenda support","files/luctus_hud.zip","images/luctus_hud.png"],
-                    ["Lucid Propblacklist","A handpicked 1000+ props blacklist. Contains HL2, Gmod and CSS props that users could use to troll","files/lucid_propblacklist.zip","images/lucid_propblacklist.png"],
-                    ["Luctus Jobranks","A fast jobranksystem that simply works and is easy to configure","files/luctus_jobranks.zip","images/luctus_jobranks.png"],
-                    ["Lucid Chat","A simple chatbox with previous-message features and tab-to-advert shortcut","files/lucid_chat.zip","images/lucid_chat.png"],
-                    ["Luctus F4menu","A simple, one-file F4 menu that just works","files/luctus_f4menu.zip","images/luctus_f4menu.png"],
-                    ["Luctus Warn","A warning system that should be enough for everyone","files/luctus_warn.zip","images/luctus_warn.png"],
-                    ["Lucid Radio","A non-lagging and optimized radio where players can choose their own frequency","files/lucid_radio.zip","images/lucid_radio.png"],
-                    ["Luctus Whitelist","A free and simple whitelist addon for e.g. SCPRP servers","files/luctus_whitelist.zip","images/luctus_whitelist.png"],
-                    ["Luctus Technician","A darkrp-city-worker replacement addon that is free and a simple money-making job","files/luctus_technician.zip","images/luctus_technician.png"],
-                    ["Luctus Emote","An emote weapon that features a list of emotes to choose from, also shows you if you are currently emoting","files/luctus_emote.zip","images/luctus_emote.png"],
-                    ["Luctus FPS Boost","A very simple fps boost window in a single cl lua file","files/luctus_fps_boost.zip","images/luctus_fpsboost.png"],
-                    ["Luctus Doorhud","Changes the buymenu and doordisplay to look better than default","files/luctus_doorhud.zip","images/luctus_doorhud.png"],
-                    ["Luctus Anticheat","A very efficient anticheat that catches scriptkiddies","files/luctus_ac.zip","images/luctus_anticheat.png"],
-                    ["Luctus Namechange","A simple 'please change your name' window upon first joining the server","files/luctus_namechange.zip","images/luctus_namechange.png"],
-                    ["Lucid Chocolate Maker","A simple re-programmed job from a darkrp server, features a money-farming job","files/lucid_chocolate_maker.zip","images/lucid_chocolate_maker.png"],
-                    ["Luctus Medic","(unfinished) Very basic medic mod where you have to wait until you can respawn","files/luctus_medic.zip","images/luctus_medic.png"],
-                    ["Luctus NLR","A NLR zone for players if they die","files/luctus_nlr.zip","images/luctus_nlr.png"],
-                    ["Luctus Safezones","Create a safezone at spawn so that nobody can be shot there","files/luctus_safezones.zip","images/luctus_safezones.png"],
-                    ["Luctus Refunds","Automatically refund players if the server crashes, map changes, etc.","files/luctus_refunds.zip","images/luctus_refunds.png"],
-                    ["Luctus Statistics","With !stats you open the job statistics - it shows which job gets played the most","files/luctus_statistics.zip","images/luctus_statistics.png"],
-                    ["Luctus Dailyreward","Get money/XP for logging in daily","files/luctus_dailyreward.zip","images/luctus_dailyreward.png"],
-                    ["Luctus Weaponcabinet","Take out weapons as a police officer and return them later","files/luctus_weaponcabinet.zip","images/luctus_weaponcabinet.png"],
+                    ["Luctus Buymenu","Press F3 to buy weapons (with which you spawn) or Traitor-/Detective-Passes for next round","files/luctus_buymenu.zip","images/luctus_buymenu.png"],
+                    ["Luctus Skins","Create custom skins for your TTT server with ease","files/luctus_skins.zip","images/luctus_skins.png"],
+                    ["Luctus Mapvote","An optimized mapvote which can be reopened via F4","files/luctus_mapvote.zip","images/luctus_mapvote.png"],
+                    ["Luctus TTT Whitelist","A simple steamid whitelist that lets your play with only friends on the server","files/luctus_ttt_whitelist.zip","images/luctus_ttt_whitelist.png"],
                     //["Luctus","DESCRIPTION","files/luctus_scoreboard.zip","images/lucid_scoreboard.png"],
-                    ["Luctus Fancyjobmsg","An addon that simply adds a message when you change jobs","files/luctus_fancyjobmsg.zip","images/luctus_fancyjobmsg.mp4"],
-                    ["Luctus Miner","A very basic mining addon with crafting and selling","files/luctus_miner.zip","images/luctus_miner.mp4"],
-                    ["Luctus Trashbin","Remove unwanted entites by dropping it on the bin","files/luctus_trashbin.zip","images/luctus_trashbin.mp4"],
-                    ["Luctus Taser","A functioning taser without custom content (no materials, models)","files/luctus_taser.zip","images/luctus_taser.mp4"],
+                    ["Luctus Inspect","Inspect weapons by holding LEFT-ALT (walk)","files/luctus_inspect.zip","images/luctus_inspect.gif"],
                 ];
                 addons.forEach(function(v,k){
                     AddSection(v[0],v[1],v[2],v[3],(k%2==1)?true:false);
