--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -45,7 +45,7 @@
 						<li><a href="index.html">Home</a></li>
 						<li><a href="darkrp.html">darkrp</a></li>
 						<li><a href="scprp.html" class="active">scprp</a></li>
-						<!--<li><a href="devhud.html">devhud</a></li>-->
+						<li><a href="ttt.html">ttt</a></li>
 						<li><a href="book.html">book</a></li>
 					</ul>
 				</nav>
