[luctus] Added scp457 video

--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -171,6 +171,7 @@
                     
                 }
                 let addons = [
+                    ["Luctus SCP 457","You constantly burn, ignite everything around you and can fire a firelaser! (+Open doors with RMB)","files/scp_457.zip","images/scp_457.mp4"],
                     ["Luctus Activityplan","An activity plan for d-class players","files/luctus_activityplan.zip","images/luctus_activityplan.png"],
                     ["Luctus Code","A small box in the top right showing the current code (red,yellow,green)","files/luctus_code.zip","images/luctus_code.png"],
                     ["Luctus SCP Names","A window whenever you change jobs to set your job-name (saves after change)","files/luctus_scp_names.zip","images/luctus_scp_names.png"],
