[luctus] Added SCP showcase videos

--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -172,6 +172,10 @@
                 }
                 let addons = [
                     ["Luctus SCP 457","You constantly burn, ignite everything around you and can fire a firelaser! (+Open doors with RMB)","files/scp_457.zip","images/scp_457.mp4"],
+                    ["Luctus SCP 173","You can only move if nobody looks at you. Everyone near you starts blinking. Kill instantly with LMB (+Open doors with RMB)","files/scp_173.zip","images/scp_173.mp4"],
+                    ["Luctus SCP 049","Kill, revive and open doors with LMB. Mix your cure with RMB and revive players with special zombie effects or find the perfect cure and revive them as a normal human being","files/scp_049.zip","images/scp_049.mp4"],
+                    ["Luctus SCP 096","If players look into your face you enrage and one-hit-kill everyone near you. You can see your targets through walls. Press RMB to cry (or scream while enraged). Open doors with LMB, even while not enraged.","files/scp_096.zip","images/scp_096.mp4"],
+                    ["Luctus SCP 966","Slow players by looking at them. LMB to make them sleep, LMB to kill, eat and heal from sleeping players (+Open doors with RMB)","files/scp_966.zip","images/scp_966.mp4"],
                     ["Luctus Activityplan","An activity plan for d-class players","files/luctus_activityplan.zip","images/luctus_activityplan.png"],
                     ["Luctus Code","A small box in the top right showing the current code (red,yellow,green)","files/luctus_code.zip","images/luctus_code.png"],
                     ["Luctus SCP Names","A window whenever you change jobs to set your job-name (saves after change)","files/luctus_scp_names.zip","images/luctus_scp_names.png"],
