[luctus] Added statistics page

--- a/luctus_at/book.html
+++ b/luctus_at/book.html
@@ -52,6 +52,7 @@
 						<li><a href="darkrp.html">darkrp</a></li>
 						<li><a href="scprp.html">scprp</a></li>
 						<li><a href="ttt.html">ttt</a></li>
+                        <li><a href="istina.html">stats</a></li>
 						<li><a href="book.html" class="active">book</a></li>
 					</ul>
 				</nav>
