--- a/luctus_at/index.html
+++ b/luctus_at/index.html
@@ -105,6 +105,18 @@
                             </div>
                         </div>
                     </section>
+                    <section>
+                        <a href="#" class="image"><img src="images/istina_banner.png" alt="" data-position="center center" /></a>
+                        <div class="content">
+                            <div class="inner">
+                                <h2>Luctus Statistics | Istina</h2>
+                                <p>Statistics about players and servers im helping.</p>
+                                <ul class="actions">
+                                    <li><a href="istina.html" class="button">go to statistics</a></li>
+                                </ul>
+                            </div>
+                        </div>
+                    </section>
                     <!--<section>
                         <a href="#" class="image"><img src="images/_index_devhud.png" alt="" data-position="center center" /></a>
                         <div class="content">
