--- a/luctus_at/ttt.html
+++ b/luctus_at/ttt.html
@@ -46,6 +46,7 @@
 						<li><a href="darkrp.html">darkrp</a></li>
 						<li><a href="scprp.html">scprp</a></li>
 						<li><a href="ttt.html" class="active">ttt</a></li>
+                        <li><a href="istina.html">stats</a></li>
 						<li><a href="book.html">book</a></li>
 					</ul>
 				</nav>
