--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -46,6 +46,7 @@
 						<li><a href="darkrp.html">darkrp</a></li>
 						<li><a href="scprp.html" class="active">scprp</a></li>
 						<li><a href="ttt.html">ttt</a></li>
+                        <li><a href="istina.html">stats</a></li>
 						<li><a href="book.html">book</a></li>
 					</ul>
 				</nav>
