[luctus] Fixed wrong meta description

--- a/luctus_at/istina.html
+++ b/luctus_at/istina.html
@@ -10,7 +10,7 @@
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
-        <meta name="description" content="luctus book, an exploit-removing script for servers. Created by overlordakise">
+        <meta name="description" content="istina, gmod statistics from rp servers. Created by overlordakise">
 		<meta property="og:image" content="https://luctus.at/favicon.ico">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
         <style>
