[luctus] Fixed istina txt width

--- a/luctus_at/istina.html
+++ b/luctus_at/istina.html
@@ -80,7 +80,7 @@
                         <section>
                             <h2>About the data</h2>
                             <div style="max-width:100%;width:500px;background-color:GhostWhite;">
-                            <iframe src="images/istina/info.txt" width="500" height="300" frameBorder="0"></iframe>
+                            <iframe style="width:100%;" src="images/istina/info.txt" height="300" frameBorder="0"></iframe>
                             </div>
                         </section>
                         <br><hr><br>
