--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -185,6 +185,11 @@
                     ["Custom Lootsystem","Loot entities for weapons or entities. Shows when it can next be looted","files/lootsystem.zip","images/lootsystem.mp4"],
                     ["Luctus Intercom","Everyone on the map hears you in 2D if you get close to an intercom","files/luctus_intercom.zip","images/luctus_intercom.mp4"],
                     ["Luctus SCP Management","Ban players from jobs, set the scp code or enable emergency jobs","files/luctus_scp_mgmt.zip","images/luctus_scp_mgmt.mp4"],
+                    ["Luctus SCP HUD","A simple HUD for SCPRP","files/luctus_shud.zip","images/luctus_shud.png"],
+                    ["Luctus SCP Scoreboard","A simple scoreboard for SCPRP","files/luctus_sscoreboard.zip","images/luctus_sscoreboard.mp4"],
+                    ["Luctus SCP Jobutils","An addon with which you can set jobs to not be able to jump,duck,sprint,talk,use, etc.","files/luctus_scp_jobutils.zip","images/luctus_scp_jobutils.png"],
+                    ["Luctus Razzia","Show D-Class personal that you are doing a razzia","files/luctus_razzia.zip","images/luctus_razzia.mp4"],
+                    
                 ];
                 addons.forEach(function(v,k){
                     AddSection(v[0],v[1],v[2],v[3],(k%2==1)?true:false);
