[luctus] Added scp radio addon

--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -172,6 +172,7 @@
                     
                 }
                 let addons = [
+                    ["Luctus SCP Radio","Due to many requests: A radio system with channel support","files/luctus_sradio.zip","images/luctus_sradio.png"],
                     ["Luctus SCP 457","You constantly burn, ignite everything around you and can fire a firelaser! (+Open doors with RMB)","files/scp_457.zip","images/scp_457.mp4"],
                     ["Luctus SCP 173","You can only move if nobody looks at you. Everyone near you starts blinking. Kill instantly with LMB (+Open doors with RMB)","files/scp_173.zip","images/scp_173.mp4"],
                     ["Luctus SCP 049","Kill, revive and open doors with LMB. Mix your cure with RMB and revive players with special zombie effects or find the perfect cure and revive them as a normal human being","files/scp_049.zip","images/scp_049.mp4"],
