[luctus] Fixed small typo

--- a/luctus_at/istina.html
+++ b/luctus_at/istina.html
@@ -118,7 +118,7 @@
                             <br>
                             <img class="luctusImage" src="images/istina/addons.png">
                             <p>As the above scatter chart shows, most of the players have less than ~250 addons which are, combined in size, less than ~25GB in size.<br>
-                            One special case is on the most top left corner, which shows that one player has over 2000 addons installed, which have a combined size of over 200GB.</p>
+                            One special case is on the most top right corner, which shows that one player has over 2000 addons installed, which have a combined size of over 200GB.</p>
                             
                             <h2>Average FPS</h2>
                             <hr>
