[luctus] Fixed links

--- a/luctus_at/index.html
+++ b/luctus_at/index.html
@@ -106,7 +106,7 @@
                         </div>
                     </section>
                     <section>
-                        <a href="#" class="image"><img src="images/istina_banner.png" alt="" data-position="center center" /></a>
+                        <a href="istina.html" class="image"><img src="images/istina_banner.png" alt="" data-position="center center" /></a>
                         <div class="content">
                             <div class="inner">
                                 <h2>Luctus Statistics | Istina</h2>
@@ -130,7 +130,7 @@
                         </div>
                     </section>-->
                     <section>
-                        <a href="/book" class="image"><img src="images/_index_book.png" alt="" data-position="center center" /></a>
+                        <a href="book.html" class="image"><img src="images/_index_book.png" alt="" data-position="center center" /></a>
                         <div class="content">
                             <div class="inner">
                                 <h2>Luctus book</h2>
