[luctus] updated discord name

--- a/luctus_at/index.html
+++ b/luctus_at/index.html
@@ -149,7 +149,7 @@
                         <h2 class="major">Contact</h2>
                         <p>Need help with your server? Have any questions? Want to learn?<br>Hit me up with a message! I am fluent in both german and english.</p>
                         <p>
-                        <span class="icon brands fa-discord"><b> Marcus#8836</b></span><br>
+                        <span class="icon brands fa-discord"><b> overlordakise</b></span><br>
                         <span style="line-height:64px;" class="icon brands fa-steam"><b> <a style="height:64px;display:inline-block;" href="https://steamcommunity.com/id/OverlordAkise">steamcommunity.com/id/OverlordAkise</a></b></span><br>
                         <br>
                         <span style="line-height:64px;" class="icon brands fa-github"><b> <a style="height:64px; display:inline-block;" href="https://github.com/OverlordAkise">github.com/OverlordAkise</a></b></span><br>
