[luctus] Updated with new addons (july 2023)

--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -173,6 +173,7 @@
                 }
                 let addons = [
                     ["Luctus Serverstatus","An optimized Scoreboard that features ULX support via rightclick","files/luctus_serverstatus.zip","images/luctus_serverstatus.png"],
+                    ["Luctus Config","A simple ingame config window for any and all addons","files/luctus_config.zip","images/luctus_config.png"],
                     ["Luctus Scoreboard","An optimized Scoreboard that features ULX support via rightclick","files/luctus_scoreboard.zip","images/luctus_scoreboard.png"],
                     ["Luctus Logs","An easy and efficient logging system. Features filtering and gmodadminsuite logging modules support","files/luctus_logs.zip","images/luctus_logs.png"],
                     ["Luctus HUD","A simple, fully functional HUD with ammo display and agenda support","files/luctus_hud.zip","images/luctus_hud.png"],
@@ -181,13 +182,17 @@
                     ["Lucid Chat","A simple chatbox with previous-message features and tab-to-advert shortcut","files/lucid_chat.zip","images/lucid_chat.png"],
                     ["Luctus F4menu","A simple, one-file F4 menu that just works","files/luctus_f4menu.zip","images/luctus_f4menu.png"],
                     ["Luctus Warn","A warning system that should be enough for everyone","files/luctus_warn.zip","images/luctus_warn.png"],
-                    ["Lucid Radio","A non-lagging and optimized radio where players can choose their own frequency","files/lucid_radio.zip","images/lucid_radio.png"],
+                    ["Luctus Radio","A non-lagging and optimized radio where players can choose their own frequency","files/luctus_radio.zip","images/luctus_radio.png"],
                     ["Luctus Whitelist","A free and simple whitelist addon for e.g. SCPRP servers","files/luctus_whitelist.zip","images/luctus_whitelist.png"],
                     ["Luctus Technician","A darkrp-city-worker replacement addon that is free and a simple money-making job","files/luctus_technician.zip","images/luctus_technician.png"],
                     ["Luctus Emote","An emote weapon that features a list of emotes to choose from, also shows you if you are currently emoting","files/luctus_emote.zip","images/luctus_emote.png"],
                     ["Luctus FPS Boost","A very simple fps boost window in a single cl lua file","files/luctus_fps_boost.zip","images/luctus_fpsboost.png"],
                     ["Luctus Doorhud","Changes the buymenu and doordisplay to look better than default","files/luctus_doorhud.zip","images/luctus_doorhud.png"],
                     ["Luctus Anticheat","A very efficient anticheat that catches scriptkiddies","files/luctus_ac.zip","images/luctus_anticheat.png"],
+                    ["Luctus Antibanevasion","This addon checks if a player is trying to circumvent his ban via vpn, family share or proxy","files/luctus_antibanevasion.zip","images/luctus_antibanevasion.png"],
+                    ["Luctus Discord","Send any ingame message to discord easily, from monitoring to ingame chat","files/luctus_discord.zip","images/luctus_discord.png"],
+                    ["Luctus Leaderboard","Easily extendable ingame leaderboard for money,playtime,etc.","files/luctus_leaderboard.zip","images/luctus_leaderboard.png"],
+                    ["Luctus Skills","Ingame skills for more damage, more resistance, etc.","files/luctus_skills.zip","images/luctus_skills.png"],
                     ["Luctus Namechange","A simple 'please change your name' window upon first joining the server","files/luctus_namechange.zip","images/luctus_namechange.png"],
                     ["Lucid Chocolate Maker","A simple re-programmed job from a darkrp server, features a money-farming job","files/lucid_chocolate_maker.zip","images/lucid_chocolate_maker.png"],
                     ["Luctus Medic","(unfinished) Very basic medic mod where you have to wait until you can respawn","files/luctus_medic.zip","images/luctus_medic.png"],
@@ -202,6 +207,8 @@
                     ["Luctus Miner","A very basic mining addon with crafting and selling","files/luctus_miner.zip","images/luctus_miner.mp4"],
                     ["Luctus Trashbin","Remove unwanted entites by dropping it on the bin","files/luctus_trashbin.zip","images/luctus_trashbin.mp4"],
                     ["Luctus Taser","A functioning taser without custom content (no materials, models)","files/luctus_taser.zip","images/luctus_taser.mp4"],
+                    ["Luctus Intro","Flying camera which shows the map before players join the game","files/luctus_intro.zip","images/luctus_intro.mp4"],
+                    ["Luctus Kevlar","A kevlar weapon with animation and entity","files/luctus_kevlar.zip","images/luctus_kevlar.mp4"],
                 ];
                 addons.forEach(function(v,k){
                     AddSection(v[0],v[1],v[2],v[3],(k%2==1)?true:false);
