--- a/luctus_at/scprp.html
+++ b/luctus_at/scprp.html
@@ -190,6 +190,9 @@
                     ["Luctus SCP Scoreboard","A simple scoreboard for SCPRP","files/luctus_sscoreboard.zip","images/luctus_sscoreboard.mp4"],
                     ["Luctus SCP Jobutils","An addon with which you can set jobs to not be able to jump,duck,sprint,talk,use, etc.","files/luctus_scp_jobutils.zip","images/luctus_scp_jobutils.png"],
                     ["Luctus Razzia","Show D-Class personal that you are doing a razzia","files/luctus_razzia.zip","images/luctus_razzia.mp4"],
+                    ["Luctus Amnestics","A simple syringe that displays text on a players screen while enabling various amounts of motion blur","files/luctus_amnestics.zip","images/luctus_amnestics.png"],
+                    ["Luctus Breach","Let's players escape their cells after 30min, can be configured to need admin approval","files/luctus_breach.zip","images/luctus_breach.png"],
+                    ["Luctus Airsoft","Changes your bullets to be non-lethal, only incapacitating players for 10 seconds and works with every gun","files/luctus_airsoft.zip","images/luctus_airsoft.mp4"],
                     
                 ];
                 addons.forEach(function(v,k){
