--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -172,7 +172,6 @@
                     
                 }
                 let addons = [
-                    ["Luctus Serverstatus","An optimized Scoreboard that features ULX support via rightclick","files/luctus_serverstatus.zip","images/luctus_serverstatus.png"],
                     ["Luctus Config","A simple ingame config window for any and all addons","files/luctus_config.zip","images/luctus_config.png"],
                     ["Luctus Scoreboard","An optimized Scoreboard that features ULX support via rightclick","files/luctus_scoreboard.zip","images/luctus_scoreboard.png"],
                     ["Luctus Logs","An easy and efficient logging system. Features filtering and gmodadminsuite logging modules support","files/luctus_logs.zip","images/luctus_logs.png"],
@@ -193,6 +192,7 @@
                     ["Luctus Discord","Send any ingame message to discord easily, from monitoring to ingame chat","files/luctus_discord.zip","images/luctus_discord.png"],
                     ["Luctus Leaderboard","Easily extendable ingame leaderboard for money,playtime,etc.","files/luctus_leaderboard.zip","images/luctus_leaderboard.png"],
                     ["Luctus Skills","Ingame skills for more damage, more resistance, etc.","files/luctus_skills.zip","images/luctus_skills.png"],
+                    ["Luctus Serverstatus","A small status page ingame, for a web version please checkout 'istina' on my github","files/luctus_serverstatus.zip","images/luctus_serverstatus.png"],
                     ["Luctus Namechange","A simple 'please change your name' window upon first joining the server","files/luctus_namechange.zip","images/luctus_namechange.png"],
                     ["Lucid Chocolate Maker","A simple re-programmed job from a darkrp server, features a money-farming job","files/lucid_chocolate_maker.zip","images/lucid_chocolate_maker.png"],
                     ["Luctus Medic","(unfinished) Very basic medic mod where you have to wait until you can respawn","files/luctus_medic.zip","images/luctus_medic.png"],
