[luctus] Update addon images, lists

--- a/luctus_at/darkrp.html
+++ b/luctus_at/darkrp.html
@@ -176,9 +176,10 @@
                     ["Luctus Scoreboard","An optimized Scoreboard that features ULX support via rightclick","files/luctus_scoreboard.zip","images/luctus_scoreboard.png"],
                     ["Luctus Logs","An easy and efficient logging system. Features filtering and gmodadminsuite logging modules support","files/luctus_logs.zip","images/luctus_logs.png"],
                     ["Luctus HUD","A simple, fully functional HUD with ammo display and agenda support","files/luctus_hud.zip","images/luctus_hud.png"],
-                    ["Lucid Propblacklist","A handpicked 1000+ props blacklist. Contains HL2, Gmod and CSS props that users could use to troll","files/lucid_propblacklist.zip","images/lucid_propblacklist.png"],
+                    ["Luctus Propblacklist","A handpicked 1000+ props blacklist. Contains HL2, Gmod and CSS props that users could use to troll","files/luctus_propblacklist.zip","images/luctus_propblacklist.png"],
                     ["Luctus Jobranks","A fast jobranksystem that simply works and is easy to configure","files/luctus_jobranks.zip","images/luctus_jobranks.png"],
                     ["Lucid Chat","A simple chatbox with previous-message features and tab-to-advert shortcut","files/lucid_chat.zip","images/lucid_chat.png"],
+                    ["Luctus MOTD","A window that opens when you join the server, made to display rules and other links","files/luctus_motd.zip","images/luctus_motd.png"],
                     ["Luctus F4menu","A simple, one-file F4 menu that just works","files/luctus_f4menu.zip","images/luctus_f4menu.png"],
                     ["Luctus Warn","A warning system that should be enough for everyone","files/luctus_warn.zip","images/luctus_warn.png"],
                     ["Luctus Radio","A non-lagging and optimized radio where players can choose their own frequency","files/luctus_radio.zip","images/luctus_radio.png"],
@@ -197,6 +198,7 @@
                     ["Lucid Chocolate Maker","A simple re-programmed job from a darkrp server, features a money-farming job","files/lucid_chocolate_maker.zip","images/lucid_chocolate_maker.png"],
                     ["Luctus Medic","(unfinished) Very basic medic mod where you have to wait until you can respawn","files/luctus_medic.zip","images/luctus_medic.png"],
                     ["Luctus NLR","A NLR zone for players if they die","files/luctus_nlr.zip","images/luctus_nlr.png"],
+                    ["Luctus Crashscreen","Auto reconnects players after a server crash","files/luctus_crashscreen.zip","images/luctus_crashscreen.png"],
                     ["Luctus Safezones","Create a safezone at spawn so that nobody can be shot there","files/luctus_safezones.zip","images/luctus_safezones.png"],
                     ["Luctus Refunds","Automatically refund players if the server crashes, map changes, etc.","files/luctus_refunds.zip","images/luctus_refunds.png"],
                     ["Luctus Statistics","With !stats you open the job statistics - it shows which job gets played the most","files/luctus_statistics.zip","images/luctus_statistics.png"],
